Fix Z-Index

--- a/src/style.css
+++ b/src/style.css
@@ -23,6 +23,12 @@
   border: 1px solid #ccc;
 }
 
+.sc_wrapper{
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+}
+
 .sc_section{
   width: 100%;
   display: flex;
@@ -91,7 +97,7 @@ font-weight: bold;
   position:absolute;
   bottom: 0;
   right: 0;
-  z-index: 0;
+  z-index: 1;
   background-image: -webkit-linear-gradient(-27deg, #FFFFFF 74.6%, #00a7e7 26.4%);
   background-color: #fff;
 }
